# storage/api-docs/api-docs.json
@@ -98,24 +98,31 @@
                 }
             }
         },
-        "/api/app/file-search/{text}": {
+        "/api/app/file-search/": {
             "post": {
                 "tags": [
                     "File"
                 ],
                 "description": "Search File",
                 "operationId": "file_search",
-                "parameters": [
-                    {
-                        "name": "text",
-                        "in": "path",
-                        "description": "text",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "text"
+                                ],
+                                "properties": {
+                                    "text": {
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object"
+                            }
                         }
                     }
-                ],
+                },
                 "responses": {
                     "200": {
                         "description": "Success",
